workshop03/weather/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: weatherappsvc
  labels:
    app: weatherappsvc 
    version: v1

spec:
  selector:
    app: weatherapp
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
