workshop03/weather/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weatherapp-vs
  namespace: default
spec:
  hosts:
  - "weather.68.183.247.97.nip.io"
  gateways:
  - weather-ingress
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: weatherappsvc
  - route:
    - destination:
        host: weatherappsvc
